--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "format": "prettier . --write"
   },
   "dependencies": {
+    "@nuxt/image": "^1.6.0",
+    "@nuxtjs/tailwindcss": "^6.12.0",
     "nuxt": "^3.11.2",
     "vue": "^3.4.21",
     "vue-router": "^4.3.0"
