--- a/package.json
+++ b/package.json
@@ -14,13 +14,20 @@
   },
   "dependencies": {
     "@nuxt/image": "^1.6.0",
-    "@nuxtjs/tailwindcss": "^6.12.0",
+    "@radix-icons/vue": "^1.0.0",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
     "nuxt": "^3.11.2",
+    "radix-vue": "^1.7.2",
+    "shadcn-nuxt": "^0.10.2",
+    "tailwind-merge": "^2.3.0",
+    "tailwindcss-animate": "^1.0.7",
     "vue": "^3.4.21",
     "vue-router": "^4.3.0"
   },
   "devDependencies": {
     "@nuxt/eslint-config": "^0.3.6",
+    "@nuxtjs/tailwindcss": "^6.12.0",
     "@typescript-eslint/eslint-plugin": "^7.6.0",
     "@typescript-eslint/parser": "^7.6.0",
     "eslint": "^8.57.0",
