--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "eslint-plugin-unused-imports": "^3.1.0",
     "husky": "^9.0.11",
     "lint-staged": "^15.2.2",
+    "nuxt-icon": "^0.6.10",
     "prettier": "^3.2.5",
     "typescript": "^5.4.5"
   }
