--- a/package.json
+++ b/package.json
@@ -13,24 +13,25 @@
     "format": "prettier . --write"
   },
   "dependencies": {
-    "@nuxt/image": "^1.6.0",
+    "@nuxt/image": "^1.1.0",
+    "@nuxt/ui": "^2.11.0",
+    "@pinia/nuxt": "^0.5.1",
     "@radix-icons/vue": "^1.0.0",
-    "@vueuse/core": "^10.9.0",
-    "appwrite": "^14.0.1",
+    "@tanstack/vue-query": "^5.12.2",
+    "@vee-validate/nuxt": "^4.12.2",
+    "@vueuse/core": "^10.7.0",
+    "appwrite": "^13.0.1",
     "class-variance-authority": "^0.7.0",
-    "clsx": "^2.1.1",
-    "nuxt": "^3.11.2",
-    "radix-vue": "^1.7.2",
-    "shadcn-nuxt": "^0.10.2",
-    "tailwind-merge": "^2.3.0",
+    "clsx": "^2.0.0",
+    "dayjs": "^1.11.10",
+    "pinia": "^2.1.7",
+    "tailwind-merge": "^2.1.0",
     "tailwindcss-animate": "^1.0.7",
-    "vue": "^3.4.21",
-    "vue-router": "^4.3.0"
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@nuxt/eslint-config": "^0.3.6",
-    "@nuxtjs/google-fonts": "^3.2.0",
-    "@nuxtjs/tailwindcss": "^6.12.0",
+    "@nuxtjs/google-fonts": "^3.1.0",
     "@typescript-eslint/eslint-plugin": "^7.6.0",
     "@typescript-eslint/parser": "^7.6.0",
     "eslint": "^8.57.0",
@@ -39,8 +40,14 @@
     "eslint-plugin-unused-imports": "^3.1.0",
     "husky": "^9.0.11",
     "lint-staged": "^15.2.2",
-    "nuxt-icon": "^0.6.10",
+    "nuxt-icon": "^0.6.6",
     "prettier": "^3.2.5",
-    "typescript": "^5.4.5"
+    "typescript": "^5.4.5",
+    "@nuxt/devtools": "latest",
+    "@types/uuid": "^9.0.7",
+    "nuxt": "^3.8.2",
+    "shadcn-nuxt": "^0.1.0",
+    "vue": "^3.3.10",
+    "vue-router": "^4.2.5"
   }
 }
