--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,7 +16,15 @@ jobs:
           node-version: "20"
       # Pick your own package manager and build script
       - run: npm install
-      - run: npx nuxt build --preset github_pages
+      - name: Build
+        run: npx nuxt build --preset github_pages
+        env:
+          APP_WRITE_ID: ${{ secrets.APP_WRITE_ID }}
+          COLLECTION_COMMENTS: ${{ secrets.COLLECTION_COMMENTS }}
+          COLLECTION_CUSTOMERS: ${{ secrets.COLLECTION_CUSTOMERS }}
+          COLLECTION_DEALS: ${{ secrets.COLLECTION_DEALS }}
+          DB_ID: ${{ secrets.DB_ID }}
+          STORAGE_ID: ${{ secrets.STORAGE_ID }}
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v1
         with:
